--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,54 @@
-body{
-    font-family: 'Roboto', sans-serif;
+/* Стилі для обнулення верхніх відступів у елементів */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
 }
 
-a{
+/* Клас для обнулення базових властивостей списків (ul) */
+ul {
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+}
+
+/* Клас для обнулення базових властивостей у посилань */
+a {
     text-decoration: none;
 }
-ul{
-    list-style: none;
+
+/* Властивості для коректного відображення картинок */
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
+
+/* Властивості для обнулення курсиву address */
+
+address {
+    font-style: normal;
+
+}
+
+body {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    color: #2C2C2C;
+    background: #FEFEFE;
+}
+
+.container {
+    max-width: 1280px;
+    padding: 0 16px;
+    margin: 0 auto;
+}
+
+
 .list-nav{
     color: var(--Black, #2C2C2C);
         font-size: 14px;
@@ -139,6 +180,76 @@ color: var(--Black, #2C2C2C);
         /* 21px */
 
 }
+
+/* section subscribe banan */
+
+.section-subscribe {
+    padding-top: 222px;
+}
+
+.all-contant-section {
+ display: flex;
+ align-items: center;
+}
+
+.container-content-subscribe {
+
+}
+
+
+.container-subscribe-image {
+  
+    
+
+}
+
+.subscribe-image {
+
+}
+
+.title-subscribe-one{
+color: var(--Black, #2C2C2C);
+    font-family: Roboto;
+    font-size: 42px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+    /* 50.4px */
+}
+
+.paragraph-subscribe {
+    max-width: 532px;
+        padding-top: 20px;
+        padding-bottom: 24px;
+    color: var(--Black, #2C2C2C);
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    /* 24px */
+}
+
+.button-sub{
+    display: inline-flex;
+        padding: 11px 22px;
+        justify-content: center;
+        align-items: center;
+    color: #2C2C2C;
+        font-family: Roboto;
+        font-size: 13px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 150%;
+        /* 19.5px */
+    
+    border-radius: 30px;
+        background: var(--Button-green, #BBF330);
+}
+/* FOOTER */
+
+
+
 .list-footer-privacy{
     color: var(--Dark-green, #7EB101);
         font-family: Roboto;
