--- a/css/styles.css
+++ b/css/styles.css
@@ -192,21 +192,6 @@ color: var(--Black, #2C2C2C);
  align-items: center;
 }
 
-.container-content-subscribe {
-
-}
-
-
-.container-subscribe-image {
-  
-    
-
-}
-
-.subscribe-image {
-
-}
-
 .title-subscribe-one{
 color: var(--Black, #2C2C2C);
     font-family: Roboto;
@@ -219,48 +204,47 @@ color: var(--Black, #2C2C2C);
 
 .paragraph-subscribe {
     max-width: 532px;
-        padding-top: 20px;
-        padding-bottom: 24px;
-    color: var(--Black, #2C2C2C);
-    font-family: Roboto;
+    padding-top: 20px;
+    padding-bottom: 24px;
+    color:#2C2C2C;
     font-size: 16px;
-    font-style: normal;
     font-weight: 400;
     line-height: 150%;
     /* 24px */
 }
+
+
 .form{
 display: flex;
-    max-width: 395px;
-   
-    align-items: center;
-    flex: 1 0 0;
+ align-items: center;
+}
 
-}
+
 .form-label{
-    
+padding-right: 32px;
 }
+
 .form-input{
+    width: 395px;
     padding: 12px 57px 12px 12px;
     border-radius: 30px;
-        border: 0.854px solid var(--Yellow-main, #FFE550);
-        background: var(--White, #FEFEFE);
+    border: 0.854px solid  #FFE550;
+     background: #FEFEFE;
 }
 .button-sub{
     display: inline-flex;
-        padding: 11px 22px;
-        justify-content: center;
-        align-items: center;
+    padding: 11px 22px;
+    justify-content: center;
+    align-items: center;
     color: #2C2C2C;
-        font-family: Roboto;
-        font-size: 13px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 150%;
+    font-family: inherit;
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 150%;
         /* 19.5px */
     border: none;
     border-radius: 30px;
-        background: var(--Button-green, #BBF330);
+    background: #BBF330;
 }
 /* FOOTER */
 
