--- a/css/styles.css
+++ b/css/styles.css
@@ -254,6 +254,7 @@ padding-right: 32px;
     border: none;
     border-radius: 30px;
     background: #BBF330;
+    transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-sub:hover{
     background: #FFE450;
